sumo/tests/traci/PositionConversion/InvalidLaneId/net_state.traci
<?xml version="1.0"?>

<!-- generated on 02/03/09 22:52:51 by SUMO sumo Version dev-SVN-r6713
<configuration>

   <input>
      <net-file>net.net.xml</net-file>
      <route-files>routes.rou.xml</route-files>
   </input>

   <output>
      <netstate-dump>netstate_dump.xml</netstate-dump>
   </output>

   <processing>
      <no-step-log>true</no-step-log>
   </processing>

   <traci_server>
      <remote-port>8833</remote-port>
      <penetration>1</penetration>
   </traci_server>

</configuration>
-->

<sumo-netstate>
   <timestep time="0">
   </timestep>
   <timestep time="1">
   </timestep>
   <timestep time="2">
   </timestep>
</sumo-netstate>
